--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </header>
 
     <h1>Effective Solutions or Your Business</h1>
+    <h5>Variant6<h5>
 
     <!-- Унікальний контент сторінки -->
   <main>
